[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azubar"
dynamic = ["version"]
description = "A progress bar creator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Kazekawa-azusa"}
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/Kazekawa-azusa/azubar"

[tool.setuptools.dynamic]
version = {attr = "azubar.__version__"}